fix: fix layout bug after mobile phone testing

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,13 @@ body {
   font-family: 'Lilita One';
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+}
+
+.wrapper {
+  margin-top: 8vh;
 }
 
 h1 {
@@ -105,8 +110,7 @@ h1 {
 
 footer {
   width: 80%;
-  position: absolute;
-  bottom: 2%;
+  margin-bottom: 4vh;
   padding: 0 1em;
   display: flex;
   justify-content: space-around;
@@ -126,7 +130,7 @@ footer i {
   margin-left: 0.5em;
 }
 
-@media screen and (min-device-width: 300px) and (max-device-width: 767px) and (orientation: portrait) {
+@media screen and (min-device-width: 300px) and (max-device-width: 800px) and (orientation: portrait) {
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
@@ -139,6 +143,10 @@ footer i {
 
   body {
     height: 100vw;
+  }
+
+  .wrapper {
+    margin-top: 8vw;
   }
 
   h1 {
@@ -160,6 +168,7 @@ footer i {
   }
 
   footer {
+    margin-bottom: 4vw;
     padding: 0 0.5em;
     flex-wrap: wrap;
     font-size: 0.75em;
